--- a/fibonacci.html
+++ b/fibonacci.html
@@ -56,6 +56,11 @@
     }
     console.log(fibonacci3(7));
     
+    function fibonacci4(n, start = 1, total = 1) {
+      if (n <= 2) return total;
+      return fibonacci4(n - 1, total, total + start);
+    }
+    console.log(fibonacci4(7));
   </script>
 </head>
 <body>
