--- a/videoToCanvas.html
+++ b/videoToCanvas.html
@@ -32,9 +32,12 @@
 </head>
 
 <body>
-    <div>
-        <input type="file">
-    </div>
+    <!-- <div>
+        <input id="upload" type="file" style="display: none;">
+        <label for="upload">
+            <img src="https://t7.baidu.com/it/u=2682096980,3524739153&fm=218&app=126&size=f242,150&n=0&f=GIF?s=F5D88B7457F76D822274D9CD0300E0F3&sec=1709312400&t=b5e240430ac6bf3ba3e563e07c85f0a0" alt="">
+        </label>
+    </div> -->
     <div>
         <button class="download">下载</button>
     </div>
