--- a/leetCode/1207-uniqueOccurrences.html
+++ b/leetCode/1207-uniqueOccurrences.html
@@ -24,9 +24,10 @@
         const mapVal = map.get(val);
         map.set(val, (mapVal || 0) + 1);
       }
+      console.log(map.size, map.values());
       return map.size === [...new Set(map.values())].length;
     };
-    uniqueOccurrences([-3,0,1,-3,1,1,1,-3,10,0])
+    console.log(uniqueOccurrences([-3,0,1,-3,1,1,1,-3,0, 0, 1, 0, 10, 10]));
   </script>
 </head>
 <body>
