--- a/jsonp.html
+++ b/jsonp.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: zjy 853580228@qq.com
+ * @Date: 2024-03-05 12:48:36
+ * @LastEditors: zjy 853580228@qq.com
+ * @LastEditTime: 2024-03-15 23:08:19
+ * @FilePath: \my-Interview-project\jsonp.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +22,7 @@
     const scriptEle = document.createElement('script');
     scriptEle.src = `${req.url}?callback=${req.callback.name}`;
     document.body.appendChild(scriptEle);
+    // scriptEle.remove();
   }
   jsonp({ url: 'url', callback: jsonpClb })
 </script>
