--- a/lazyMan.html
+++ b/lazyMan.html
@@ -38,7 +38,8 @@
 			}
 		}
 		const lazyMan = new LazyMan('bls');
-		lazyMan.eat('芭乐').eat('火龙果').sleep(2).eat('苹果');
+		lazyMan.eat('芭乐')
+		// lazyMan.eat('芭乐').eat('火龙果').sleep(2).eat('苹果');
 	</script>
 </head>
 <body>
