--- a/fibonacci.html
+++ b/fibonacci.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: zjy 853580228@qq.com
+ * @Date: 2024-03-05 12:48:36
+ * @LastEditors: zjy 853580228@qq.com
+ * @LastEditTime: 2024-03-15 23:00:50
+ * @FilePath: \my-Interview-project\fibonacci.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +22,7 @@
       if (n === 1) return 1;
       return arguments.callee(n - 1) + arguments.callee(n - 2);
     }
-    console.log(fibonacci(6));
+    console.log(fibonacci(2));
 
     // 使用闭包保存每次的递归值
     function fibonacci1(n) {
@@ -54,7 +62,7 @@
       }
       return res;
     }
-    console.log(fibonacci3(7));
+    console.log(fibonacci3(2));
     
     function fibonacci4(n, start = 1, total = 1) {
       console.log({n, start, total});
