--- a/isEqual.html
+++ b/isEqual.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: zjy 853580228@qq.com
+ * @Date: 2024-03-05 12:48:36
+ * @LastEditors: zjy 853580228@qq.com
+ * @LastEditTime: 2024-03-11 13:18:22
+ * @FilePath: \my-Interview-project\isEqual.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +25,7 @@
       }
       // 两个都是对象或者数组，而且不相等
       // 1、先取出 obj1 和 obj2 的 keys，比较长度
-      Object.keys(obj1) !== Object.keys(obj2) {
+      if (Object.keys(obj1) !== Object.keys(obj2)) {
         return false;
       }
       // 2、以 obj1 为基准，和 obj2 递归比较
