--- a/leetCode/01-twoSum.html
+++ b/leetCode/01-twoSum.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: zjy 853580228@qq.com
+ * @Date: 2024-03-05 12:48:36
+ * @LastEditors: zjy 853580228@qq.com
+ * @LastEditTime: 2024-03-15 23:56:32
+ * @FilePath: \my-Interview-project\leetCode\01-twoSum.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,8 +29,25 @@
         }
         map.set(val, i);
       }
+      // const length = nums.length;
+      // for (let i = 0; i < length - 1; i++) {
+      //   const n1 = nums[i];
+      //   let flag = false;
+      //   const res = [];
+      //   for (let j = i + 1; j < length; j++) {
+      //     const n2 = nums[j];
+      //     if (n1 + n2 === target) {
+      //       flag = true;
+      //       res.push(i);
+      //       res.push(j);
+      //       break;
+      //     }
+      //   }
+      //   if (flag) return res;
+      // }
       return -1;
     };
+    console.log(twoSum([1, 5, 7, 8, 2, 4], 5));
   </script>
 </head>
 <body>
