--- a/leetCode/71-simplifyPath.html
+++ b/leetCode/71-simplifyPath.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: zjy 853580228@qq.com
+ * @Date: 2024-03-05 12:48:36
+ * @LastEditors: zjy 853580228@qq.com
+ * @LastEditTime: 2024-03-16 00:11:49
+ * @FilePath: \my-Interview-project\leetCode\71-simplifyPath.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +33,7 @@
         return '/' + stack.join('/');
     };
     console.log(simplifyPath('/../')); // '/'
-    console.log(simplifyPath('/home/')); // '/'
+    console.log(simplifyPath('/home/./b')); // '/'
     console.log(simplifyPath('/home//foo/')); // '/home/foo'
   </script>
 </head>
