--- a/mergeSort.html
+++ b/mergeSort.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: zjy 853580228@qq.com
+ * @Date: 2024-03-05 12:48:36
+ * @LastEditors: zjy 853580228@qq.com
+ * @LastEditTime: 2024-03-15 23:24:06
+ * @FilePath: \my-Interview-project\mergeSort.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +27,6 @@
       4、重复第 3 步单元，直到最后得到一个排好序的数组。
     */
     function merge(leftArr = [], rightArr = []) {
-      console.log(leftArr, rightArr);
       const result = [];
       while(leftArr.length && rightArr.length) {
         result.push(leftArr[0] > rightArr[0] ? rightArr.shift() : leftArr.shift());
