--- a/object for of.html
+++ b/object for of.html
@@ -37,71 +37,72 @@
     // for (const value of obj) {
     //   console.log(value);
     // }
-    // const obj = {
-    //   a: 1,
-    //   b: 2,
-    //   c: 'c',
-    // }
-    // obj[Symbol.iterator] = function () {
-    //   const keys = Object.keys(this);
-    //   let count = 0;
-    //   return {
-    //     next() {
-    //       if (count < keys.length) {
-    //         return { value: obj[keys[count++]], done: false };
-    //       } else {
-    //         return { value: undefined, done: true };
-    //       }
-    //     }
-    //   }
-    // }
-    // for (const value of obj) {
-    //   console.log(value);
-    // }
     const obj = {
-      a: 4,
-      b: 5,
-      c: 6,
+      a: 1,
+      b: 2,
+      c: 'c',
     }
-    obj[Symbol.iterator] = function* () {
-      for (const key in obj) {
-        if (Object.hasOwnProperty.call(obj, key)) {
-          yield obj[key]
+    obj[Symbol.iterator] = function () {
+      const that = this;
+      const keys = Object.keys(that);
+      let count = 0;
+      return {
+        next() {
+          if (count < keys.length) {
+            return { value: that[keys[count++]], done: false };
+          } else {
+            return { value: undefined, done: true };
+          }
         }
       }
     }
-    console.log(obj);
     for (const value of obj) {
       console.log(value);
     }
+    // const obj = {
+    //   a: 4,
+    //   b: 5,
+    //   c: 6,
+    // }
+    // obj[Symbol.iterator] = function* () {
+    //   for (const key in obj) {
+    //     if (Object.hasOwnProperty.call(obj, key)) {
+    //       yield obj[key]
+    //     }
+    //   }
+    // }
+    // console.log(obj);
+    // for (const value of obj) {
+    //   console.log(value);
+    // }
 
-    const wmap = new WeakMap();
-    function fn() {
-      const obj = { name: 'zhangsan' };
-      wmap.set(obj, 'map set');
-    }
-    // fn()
+    // const wmap = new WeakMap();
+    // function fn() {
+    //   const obj = { name: 'zhangsan' };
+    //   wmap.set(obj, 'map set');
+    // }
+    // // fn()
 
-    console.log(1);
-    setTimeout(() => {
-      console.log(2);
-    }, 11);
-    setTimeout(() => {
-      console.log(3);
-    }, 10);
-    console.log(4);
+    // console.log(1);
+    // setTimeout(() => {
+    //   console.log(2);
+    // }, 11);
+    // setTimeout(() => {
+    //   console.log(3);
+    // }, 10);
+    // console.log(4);
     
-    async function fn() {
-      console.log('111');
-      await sleep(1000);
-      console.log('333');
-    }
-    fn();
-    function sleep(time) {
-      return new Promise(resolve => {
-        setTimeout(resolve, time);
-      });
-    }
+    // async function fn() {
+    //   console.log('111');
+    //   await sleep(1000);
+    //   console.log('333');
+    // }
+    // fn();
+    // function sleep(time) {
+    //   return new Promise(resolve => {
+    //     setTimeout(resolve, time);
+    //   });
+    // }
   </script>
 </head>
 
