--- a/extends.html
+++ b/extends.html
@@ -107,7 +107,7 @@
 
     /* 
       寄生组合式继承是指使用“借用构造函数”继承父类实例的属性和方法，并将子类原型指向一个父类实例的副本。
-      这种方式可以避免调用两次父类构造函数，且不会继承父类原型上的属性和方法。
+      这种方式可以避免调用两次父类构造函数，很好地继承了父类的方法和属性以及自己添加属性和方法。
     */
     function Parent(name) {
       console.log(name);
