--- a/圣杯布局.html
+++ b/圣杯布局.html
@@ -35,8 +35,8 @@
     }
     .right {
       float: left;
-      /* margin-right: -100px; */
-      margin-left: -100px;
+      margin-right: -100px;
+      /* margin-left: -100px; */
       width: 100px;
       background: rebeccapurple;
     }
